DD-63 update maven sonatype plugin for release (#27)
* DD-63 update maven sonatype plugin for release

* DD-63 improve javadoc